# Universal-Plasmid-Maker

./: .gitignore  README.md  environment.yml  make_plasmid.py  pyproject.toml  test_ori_puc19.py
data/input/: Design_pUC19.txt
notebooks/: Example_Run.ipynb  example_design.txt  example_input.fa  example_output.fa  example_output.gb
outputs/: pUC19_constructed.fa  pUC19_constructed.gb
plasmid_builder/: assembler.py  backbone.py  io.py  ori_finder.py  pipeline.py  restriction_utils.py
plasmid_builder/backbones/rsf1010/: rsf1010.fasta  rsf1010.json
tests/: test_assembler.py  test_backbone.py  test_io.py  test_ori_finder.py  test_ori_integration.py  test_pipeline.py  test_restriction_scan.py  test_restriction_utils.py
universal_plasmid_maker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
