[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-plasmid-maker"
version = "0.1.0"
description = "Universal plasmid construction pipeline"
authors = [{ name = "Suchir Kohli" }]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
